# async_io

./: .clang-format  CMakeLists.txt  LICENSE  PROMPT.md  README.MD  async_io.hpp  main.cc  read_file_example.cc  read_large_file_example.cc  tcp_wr_example.cc
.github/: valgrind.supp
.github/workflows/: ci.yml
examples/: CMakeLists.txt  backpressure_example.cc  buffer_pool_example.cc  custom_handler_example.cc  file_write_example.cc  read_file_example.cc  read_large_file_example.cc  server_tcp_example.cc  signal_shutdown_example.cc  task_chain_example.cc  tcp_client_example.cc  tcp_wr_example.cc  timeout_retry_example.cc
include/talon/: async_io.hpp  async_io_constants.hpp  async_io_fwd.hpp  async_io_handler.hpp  async_io_kernelbuf.hpp  async_io_pool.hpp  async_io_result.hpp  async_io_task.hpp  async_io_tcp_client.hpp  async_io_tcp_server.hpp  async_io_traits.hpp
tests/: CMakeLists.txt
tests/adversarial/: test_backpressure.cc  test_double_submit.cc  test_invalid_fd.cc  test_lifetime.cc  test_memory_leak.cc  test_null_pointer.cc  test_queue_full.cc  test_shutdown_stress.cc  test_signal_shutdown.cc
tests/integration/: test_cancel.cc  test_file_io.cc  test_repeat_forever.cc  test_retry.cc  test_task_chain.cc  test_tcp_basic.cc  test_timeout.cc
tests/stress/: test_aba_stress.cc  test_buffer_reuse.cc  test_high_throughput.cc  test_pool_hammer.cc  test_pool_stress.cc
tests/unit/: test_done_state.cc  test_function_traits.cc  test_ioresult.cc  test_kernelbuf.cc  test_pools.cc  test_task_state.cc  test_user_data.cc
